--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="4YPrThJKLhW_2dgDmAlSK9F8Mu8Lnb6zNKtQifI9j8k" />
+    <meta name="description" content="An object detection web application has been successfully implemented. Input an image url in the main project and we will give you the top 5 predictions for it." />
     <title>Object classifier web app</title>
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
